samples/_failures_safe/1761298331_36f788_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_befe6ccc.c: In function ‘main’:
./samples/SAFE/__tmp_befe6ccc.c:162:35: error: expected ‘]’ at end of input
  162 |     print_matrix(&stack_matrices[0
      |                                   ^
      |                                   ]
./samples/SAFE/__tmp_befe6ccc.c:162:5: error: expected declaration or statement at end of input
  162 |     print_matrix(&stack_matrices[0
      |     ^~~~~~~~~~~~
